--- a/frontend/src/css/Frontpage.css
+++ b/frontend/src/css/Frontpage.css
@@ -37,14 +37,14 @@ body{
         margin-left: 50px;
     }
 
-    /* .front-page .content h1 span {
+    .front-page .content h1 span {
         background: linear-gradient(90deg, #6a82fb 0%, #fc5c7d 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         display: inline-block;
         font-size: 2.8rem;
         
-    } */
+    }
 
     .front-page .content p {
         font-size: 1.15rem;
